# fm_suggestion_bot

./: .gitignore  Cargo.toml  README.md  build.rs
migrations/: 20210916140209_init_db.sql  20210918114009_init_cached_pic.sql  20210920134409_init_pic.sql  20210927234009_alt_offered_post.sql  20211009073813_add_stats.sql  20211231000000_init_ban.sql
src/: admin_commands.rs  main.rs
src/data/: db.rs  mod.rs
src/data/model/: ban.rs  cached_pic.rs  mod.rs  offered_post.rs  pic.rs  stats.rs
src/data/repo/: ban_repo.rs  cached_pic_repo.rs  mod.rs  offered_post_repo.rs  pic_repo.rs  stats_repo.rs
src/utils/: document_utils.rs  env_utils.rs  error_utils.rs  message_utils.rs  mime_utils.rs  mod.rs  option_utils.rs  pic_utils.rs  result_utils.rs  user_utils.rs  version.rs
