cargo-features = ["strip"]

[package]
name = "fm_suggestion_bot"
description = "Channel suggestions bot for Telegram"
version = "0.1.0"
authors = [
    "Mihail Preis <mihail.preis@gmail.com>"
]
readme = "README.md"
keywords = ["telegram", "telegram-bot", "suggestions"]
license = "MIT"
repository = "https://github.com/MihailPreis/fm_suggestion_bot/"
edition = "2018"

[dependencies]
teloxide = { git = "https://github.com/MihailPreis/teloxide", features = ["auto-send", "macros"] }
log = "0.4"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
tokio-stream = "0.1.7"

[patch.crates-io]
teloxide-core = { git = "https://github.com/MihailPreis/teloxide-core" } # Fix chat admins

[profile.release]
opt-level = 3
lto = true
debug = 0
strip="symbols"